<resources>
    <string name="mapbox_access_token" translatable="false">sk.eyJ1IjoibWluZC1ieXRlIiwiYSI6ImNtNnAwcnh0NzE4NG0yaXNob3ZubzMxOGwifQ.Blz73LlYJNxScJv_48VkxA</string>
    <string name="app_name">GPS Maps Voice Navigation</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="languages">Languages</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="theme_switch">Switch Theme</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank">ATM</string>
    <string name="petrol_pump">Gas</string>
    <string name="gym">Gym</string>
    <string name="airport">Airport</string>
    <string name="hospital">Hospital</string>
    <string name="coffee">Coffee</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="hotels">Hotels</string>
    <string name="mosque">Mosque</string>
    <string name="supermarket">Supermarket</string>
    <string name="park">Park</string>
    <string name="gallery">Gallery</string>
    <string name="food">Food</string>
    <string name="bus_stop">Bus Stop</string>
    <string name="police">Police</string>
    <string name="hi_where_to_go">Hi where to go?</string>
    <string name="my_location">My Location</string>
    <string name="allow_location_permission_to_access_your_location_and_get_precise_map_details">Allow Location permission to access your location and get precise map details.</string>
    <string name="location_permission">Location Permission</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_to_access_your_location_and_get_precise_map_details">Enable GPS to access your location and get precise map details.</string>
    <string name="enable">ENABLE</string>
    <string name="route_finder">Route Finder</string>
    <string name="navigate">Navigate</string>
    <string name="current_location">Current Location</string>
    <string name="destination">Destination</string>
    <string name="start_navigate">Start Navigate</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="gps_navigation">Gps navigation</string>
    <string name="allow_location_permission_to_find_nearby_places_and_receive_accurate_location_based_recommendations">Allow Location permission to find nearby places and receive accurate location-based recommendations.</string>
    <string name="enable_gps_to_find_nearby_places_and_get_accurate_location_based_recommendations">Enable GPS to find nearby places and get accurate location-based recommendations.</string>
    <string name="satellite_view">Satellite View</string>
    <string name="allow_location_permission_to_access_map_and_explore_locations_in_real_time">Allow Location permission to access map and explore locations in real time.</string>
    <string name="enable_gps_to_access_map_and_explore_locations_in_real_time">Enable GPS to access map and explore locations in real time.</string>
    <string name="select_language">Select Language</string>
    <string name="done">Done</string>
    <string name="navigate_fast_arrive_safe">Navigate fast, arrive safe.</string>
    <string name="find_places_near_you_instantly">Find places near you instantly.</string>
    <string name="main_features">Main Features</string>
    <string name="other_features">Other Features</string>
    <string name="street_view">Street View</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="compass">Compass</string>
    <string name="voice_map">Voice Map</string>
    <string name="seven_wonders">Seven\nWonders</string>
    <string name="seven_wonders1">Seven Wonders</string>
    <string name="step_into_the_streets">Step into the Streets</string>
    <string name="explore_every_corner_navigate_with_real_life_street_views">Explore Every Corner – Navigate with Real-Life Street Views!</string>
    <string name="smart_route_finder">Smart Route Finder</string>
    <string name="navigate_smarter_arrive_faster_your_path_perfectly_planned">Navigate Smarter, Arrive Faster – Your Path, Perfectly Planned!</string>
    <string name="explore_from_above">Explore from Above</string>
    <string name="see_the_world_in_detail_navigate_with_satellite_precision">See the World in Detail – Navigate with Satellite Precision!</string>
    <string name="search">Search</string>
    <string name="comming_soon">Coming Soon</string>
    <string name="cancel_navigation">Cancel Navigation</string>
    <string name="alert">Alert!</string>
    <string name="this_will_stop_your_navigation">This will stop your Navigation</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="exit_app">Exit App?</string>
    <string name="are_you_sure_you_want_to_exit_our_app">Are you sure you want to exit our app?</string>
    <string name="no_wait">No! wait</string>
    <string name="allow_location_permission_to_use_voice_search_to_find_your_destination">Allow Location permission to use voice search to find your destination.</string>
    <string name="voice_search">Voice Search</string>
    <string name="enable_gps_for_accurate_navigation_and_real_time_route_tracking">Enable GPS for accurate navigation and real-time route tracking</string>
    <string name="allow_location_permission_for_accurate_navigation_and_real_time_route_tracking">Allow Location permission for accurate navigation and real-time route tracking.</string>
    <string name="allow_location_permission_to_use_the_compass_and_find_your_direction_accurately">Allow Location permission to use the compass and find your direction accurately.</string>
    <string name="term_of_use">Term of use</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="cancel_notice">This subscription is auto-renewable and will be instantly recharged these subscriptions will be re-activated at the end of selected period.</string>
    <string name="compass_description">Directional navigation tool.</string>
    <string name="my_location_description">Real-time vision.</string>
    <string name="street_view_description">Interactive traffic view.</string>
    <string name="satellite_view_description">Aerial geographic view.</string>
    <string name="voice_map_description">Audio-guided navigation.</string>
    <string name="seven_wonders_description">Iconic world landmarks.</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="unlock_pro_version">Unlock Pro Version</string>
    <string name="unlimited_access_to_all_features_with_ads_free_experience">Unlimited access to all features with Ads free experience.</string>
    <string name="continue_with_monthly">Continue With Monthly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="gps_navigations">GPS Navigation</string>
    <string name="continue_with_yearly">Continue With Yearly</string>

    <string name="allow_notifications_to_stay_updated_with_important_alerts_and_updates_tailored_just_for_you">Allow notifications to stay updated with important alerts and updates tailored just for you</string>
    <string name="full_screen_ad_is_expected_to_show">Full screen ad is expected to show</string>
    <string name="please_wait">Please wait</string>
    <string name="ai_guidance">AI Guidance</string>
    <string name="ask_me_anything">Ask me anything</string>
    <string name="_2_unlock_ai_assistance_plan_smarter_travel_easier">Unlock AI Assistance – Plan Smarter, Travel Easier.</string>

    <string name="i_m_your_ai_travel_guide_just_tell_me_where_and_when_you_re_going_and_i_ll_help_plan_your_perfect_trip">I\'m your AI travel guide! Just tell me where and when you\'re going, and I\'ll help plan your perfect trip.</string>

    <string name="get_started">Get Started</string>
    <string name="app_image">App image</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="like_our_gps_app">Like our GPS app?</string>
    <string name="discover_the_seven_wonders">Discover the Seven Wonders!</string>


    <string name="you_have_reached_the_limit">You have reached the limit!</string>
    <string name="upgrade">Upgrade</string>
    <string name="no_internet_connections">No internet connection.</string>
    <string name="Unexpected_error">Unexpected error.</string>
    <string name="no_nearby_places_found">No Nearby Places Found</string>
    <string name="apply">Apply</string>
    <string name="def">Default</string>
    <string name="traffic_day">Traffic Day</string>
    <string name="traffic_night">Traffic Night</string>
    <string name="satellite">Satellite</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="continue_with_weekly">Continue With Weekly</string>
    <string name="weekly">Weekly</string>
    <string name="continue_txt">Continue</string>
    <string name="apply_language">Apply Language</string>
    <string name="get_direction">Get Direction Here</string>
    <string name="gps" translatable="false"><font color="#AE00FF">GPS</font><font color="#232323"> Voice</font><font color="#2C8AF8"> Navigation</font></string>
    <string name="weathergrant">Activate Location to stay updated with your local weather conditions</string>
    <string name="gpsweather">Enable GPS to stay updated with your local weather conditions.</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="visibility">Visibility</string>
    <string name="weather">Weather</string>
    <string name="upgrade_to">Upgrade To</string>
    <string name="once_you_subscribe_your_plan_will_automatically_renew_unless_you_choose_to_cancel">Once you subscribe, your plan will automatically renew unless you choose to cancel.</string>
    <string name="ads_free_experience">Ads Free Experience</string>
    <string name="ai_assistance">AI Assistance</string>
    <string name="others">Others</string>
    <string name="all_street_clear_view_easily">All Street Clear View Easily</string>
    <string name="explore_all_places_nearby">Explore All places Nearby</string>
    <string name="this_action_man_contain_ad">This action may contain ads</string>
    <string name="tools">Tools</string>
    <string name="notification_permussion">Notification</string>
    <string name="voice_nav">Voice Navigation</string>


</resources>