<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SateliteView">
    <RelativeLayout
        android:id="@+id/adLayout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="#EBEBEB"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/adLayout">

        <ImageView
            android:id="@+id/icBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/iconback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satellite_view"
            android:fontFamily="@font/lato_bold"
            android:visibility="visible"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar"
        />

    <ImageView
        android:id="@+id/getlocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:src="@drawable/myloc"
        android:text="Find me"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupcontent"
        android:layout_width="wrap_content"
        android:visibility="invisible"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="mapView,getlocation"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/permissionLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/onb3"/>

        <TextView
            android:id="@+id/textView43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/location_permission"
            android:fontFamily="@font/lato_bold"
            android:textFontWeight="700"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="@dimen/_210sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:text="@string/allow_location_permission_to_access_map_and_explore_locations_in_real_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView43" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/grantpermission"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/btnbg"
            android:text="@string/grant_permission"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:singleLine="true"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView44" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settinglayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView122"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/onb3"/>

        <TextView
            android:id="@+id/textView433"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/enable_gps"
            android:fontFamily="@font/lato_bold"
            android:textFontWeight="700"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/imageView122"
            app:layout_constraintStart_toStartOf="@+id/imageView122"
            app:layout_constraintTop_toBottomOf="@+id/imageView122" />

        <TextView
            android:id="@+id/textView444"
            android:layout_width="@dimen/_210sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:text="@string/enable_gps_to_access_map_and_explore_locations_in_real_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView433" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enablegps"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/btnbg"
            android:text="@string/enable"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:fontFamily="@font/lato_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView444" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>