<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.Navigate">
    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar">

    </com.mapbox.maps.MapView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/iconback"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_finder"
            android:visibility="visible"
            android:textColor="@color/black"
            android:fontFamily="@font/lato_bold"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_minus7sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxHeight="@dimen/_100sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">


            <TextView
                android:id="@+id/currentAddress"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:ellipsize="marquee"
                android:focusable="true"
                android:fontFamily="@font/lato_regular"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:layout_marginBottom="@dimen/_18sdp"
                android:text="@string/my_location"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toTopOf="@+id/navigate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />


            <TextView
                android:id="@+id/navigate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:background="@drawable/btnbg"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:text="@string/navigate"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentAddress" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>